# ai-onboarding

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5fb06c6de62d_initial_schema.py  d6bcf4c932ea_add_refresh_sessions.py
backend/app/: main.py
backend/app/api/: auth.py  invitations.py
backend/app/core/: auth_deps.py  db.py  security.py  settings.py
backend/app/models/: __init__.py  chat_message.py  chat_session.py  document.py  enums.py  invitation.py  organization.py  refresh_session.py  user.py
backend/app/schemas/: auth.py  invitations.py
